--- a/docker/cpu/docker-compose.yml
+++ b/docker/cpu/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - ONNX_OPTIMIZATION_LEVEL=all
       - ONNX_MEMORY_PATTERN=true
       - ONNX_ARENA_EXTEND_STRATEGY=kNextPowerOfTwo
-# why      
+# why       #
   # Gradio UI service [Comment out everything below if you don't need it]
 #  gradio-ui:
 #    image: ghcr.io/remsky/kokoro-fastapi-ui:v0.1.0
