--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -9,10 +9,6 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ['3.10']
-
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -26,7 +22,8 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./docker/cpu
+          context: .
+          file: ./docker/cpu/Dockerfile
           platforms: linux/arm64
           push: false
           load: true
