--- a/docker/cpu/Dockerfile
+++ b/docker/cpu/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=linux/arm64 python:3.10-slim
+FROM python:3.10-slim
 
 # Install dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-    
+
 COPY --chown=appuser:appuser ../api ./api
 # Install uv
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
