--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -18,9 +18,13 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          buildkitd-flags: --allow-insecure-entitlement network.host
 
       - name: Build Docker image
         uses: docker/build-push-action@v5
+        env:
+          DOCKER_BUILDKIT: 1
         with:
           context: .
           file: ./docker/cpu/Dockerfile
@@ -28,6 +32,7 @@ jobs:
           push: false
           load: true
           tags: kokoro-fastapi:latest
+          allow: network.host
 
       - name: Create deployment package
         uses: a7ul/tar-action@v1.1.0
