--- a/docker/cpu/Dockerfile
+++ b/docker/cpu/Dockerfile
@@ -1,5 +1,11 @@
 FROM --platform=linux/arm64 python:3.10-slim
 
+# Add diagnostic information to help verify our architecture
+RUN echo "Architecture details:" && \
+    uname -a && \
+    file /bin/ls && \
+    dpkg --print-architecture
+
 # Install dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     espeak-ng \
@@ -10,18 +16,28 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# Install uv and set permissions
-RUN curl -L https://github.com/astral-sh/uv/releases/download/0.5.24/uv-aarch64-unknown-linux-gnu.tar.gz | tar xz --strip-components=1 && \
+# Install uv with extra verification steps
+RUN mkdir -p /tmp/uv && cd /tmp/uv && \
+    echo "Downloading uv for ARM64..." && \
+    curl -L -o uv.tar.gz https://github.com/astral-sh/uv/releases/download/0.5.24/uv-aarch64-unknown-linux-gnu.tar.gz && \
+    echo "Extracting uv..." && \
+    tar xzf uv.tar.gz --strip-components=1 && \
+    echo "Examining uv binary:" && \
+    file uv && \
+    echo "Moving uv to /usr/local/bin..." && \
     mv uv /usr/local/bin/ && \
-    chmod +x /usr/local/bin/uv
+    chmod +x /usr/local/bin/uv && \
+    echo "Testing uv:" && \
+    /usr/local/bin/uv --version && \
+    cd / && rm -rf /tmp/uv
+
 # Create non-root user
 RUN useradd -m -u 1000 appuser
 
 # Create directories and set ownership
 RUN mkdir -p /app/models && \
     mkdir -p /app/api/src/voices && \
-    chown -R appuser:appuser /app && \
-    chmod 755 /usr/local/bin/uv
+    chown -R appuser:appuser /app
 
 USER appuser
 
@@ -29,11 +45,8 @@ USER appuser
 WORKDIR /app/models
 RUN set -x && \
     curl -L -o model.tar.gz https://github.com/remsky/Kokoro-FastAPI/releases/download/v0.0.1/kokoro-82m-onnx.tar.gz && \
-    echo "Downloaded model.tar.gz:" && ls -lh model.tar.gz && \
     tar xzf model.tar.gz && \
-    echo "Contents after extraction:" && ls -lhR && \
-    rm model.tar.gz && \
-    echo "Final contents:" && ls -lhR
+    rm model.tar.gz
 
 # Download and extract voice models
 WORKDIR /app/api/src/voices
@@ -47,23 +60,23 @@ WORKDIR /app
 # Copy dependency files
 COPY --chown=appuser:appuser pyproject.toml ./pyproject.toml
 
-# Install dependencies
-RUN --mount=type=cache,target=/root/.cache/uv \
-    uv venv && \
-    uv sync --extra cpu --no-install-project
+# Install dependencies using pip instead of uv for initial setup
+RUN python -m pip install --user uv && \
+    $HOME/.local/bin/uv venv && \
+    . .venv/bin/activate && \
+    $HOME/.local/bin/uv pip install --no-deps -r requirements.txt
 
 # Copy project files
 COPY --chown=appuser:appuser api ./api
 
 # Install project
-RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --extra cpu
+RUN . .venv/bin/activate && \
+    $HOME/.local/bin/uv pip install -e .
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONPATH=/app:/app/models
-ENV PATH="/app/.venv/bin:/root/.cargo/bin:$PATH"
-ENV UV_LINK_MODE=copy
+ENV PATH="/app/.venv/bin:/home/appuser/.local/bin:$PATH"
 
 # Run FastAPI server
-CMD ["uv", "run", "python", "-m", "uvicorn", "api.src.main:app", "--host", "0.0.0.0", "--port", "8880", "--log-level", "debug"]
+CMD ["python", "-m", "uvicorn", "api.src.main:app", "--host", "0.0.0.0", "--port", "8880", "--log-level", "debug"]
