--- a/docker/cpu/Dockerfile
+++ b/docker/cpu/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=linux/arm64 python:3.10-slim
+FROM python:3.10-slim
 
 # Add diagnostic information to help verify our architecture
 RUN echo "Architecture details:" && \
